[gd_scene load_steps=13 format=2]

[ext_resource path="res://Mowing/Mower/Mower_Basic.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mowing/Storage Empty Truck/Storage_Empty_Area.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mowing/Fuel_Truck/Fuel_Truck.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Player_HUD/Player_HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mowing/Base_Of_Grid/Base_Of_Grid.tscn" type="PackedScene" id=5]
[ext_resource path="res://Mowing/Ground/Ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Environment/Sky_Image_ligher_blue_version.png" type="Texture" id=7]
[ext_resource path="res://Mowing/Current_Job/Current_Job.gd" type="Script" id=8]

[sub_resource type="PanoramaSky" id=3]
panorama = ExtResource( 7 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 3 )
background_sky_custom_fov = 32.1
ambient_light_energy = 6.83
ambient_light_sky_contribution = 0.07
fog_enabled = true
fog_color = Color( 0.148195, 0.53586, 0.910156, 1 )
fog_sun_color = Color( 0.690196, 0.54902, 0.0196078, 1 )
fog_sun_amount = 1.0
fog_depth_begin = 5.0
tonemap_mode = 4
auto_exposure_enabled = true

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "sun_rotate"
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( 270, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 9, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 0.0, 1.0 ]
}

[node name="Level" type="Spatial"]
script = ExtResource( 8 )

[node name="Mowing_Area" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="Mower" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 3, 0 )

[node name="Ground_Below_Grid" parent="." instance=ExtResource( 5 )]

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Main_Light" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 44.5718, -1.9483e-06 )
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main_Light"]
anims/RESET = SubResource( 4 )
anims/sun_rotate = SubResource( 5 )

[node name="Player_HUD" parent="." instance=ExtResource( 4 )]

[node name="Storage_Depot" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.84791, 33.6406 )

[node name="Fuel_Truck" parent="." instance=ExtResource( 3 )]

[connection signal="collided" from="Mower" to="." method="handle_mower_collision"]
